# SlimZero

./: .gitignore  LICENSE  QUICKREF.md  README.md  SETUP_COMPLETE.md  SlimZero_PRD_v1.0.docx  SlimZero_PRD_v1.0.md  activate-venv.bat  prd.json  progress.txt  pyproject.toml  python.ini  requirements.txt
.github/workflows/: publish.yml
.gsd/: .clinerules  .gitignore  .release-monitor.sh  .secretscanignore  CHANGELOG.md  CONTRIBUTING.md  README.ja-JP.md  README.ko-KR.md  README.pt-BR.md  README.zh-CN.md  SECURITY.md  VERSIONING.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.gsd/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.gsd/.plans/: 1755-install-audit-fix.md
.gsd/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.gsd/docs/: AGENTS.md  ARCHITECTURE.md  CLI-TOOLS.md  COMMANDS.md  CONFIGURATION.md  FEATURES.md  README.md  USER-GUIDE.md  context-monitor.md  manual-update.md
.gsd/hooks/: gsd-check-update.js  gsd-context-monitor.js  gsd-read-guard.js  gsd-statusline.js  gsd-workflow-guard.js
.gsd/scripts/: base64-scan.sh  build-hooks.js  prompt-injection-scan.sh  run-tests.cjs  secret-scan.sh
.gsd/sdk/: package-lock.json  tsconfig.json  vitest.config.ts
.gsd/tests/: agent-frontmatter.test.cjs  agent-install-validation.test.cjs  agent-skills.test.cjs  ai-evals.test.cjs  analyze-dependencies.test.cjs  anti-pattern-enforcement.test.cjs  antigravity-install.test.cjs  ask-user-questions-fallback.test.cjs  atomic-write.test.cjs  audit-fix-command.test.cjs  autonomous-allowed-tools.test.cjs  autonomous-interactive.test.cjs  autonomous-to-flag.test.cjs  autonomous-ui-steps.test.cjs  bug-1736-local-install-commands.test.cjs  bug-1754-js-hook-guard.test.cjs  bug-1817-sh-hook-guard.test.cjs  claude-md.test.cjs  (+141 more)
audits/: CLAUDE.md  SlimZero_Audit_Report.docx  SlimZero_CrossCheck_Audit_v0.1.2.docx  SlimZero_CrossCheck_Audit_v0.1.2.md
docs/: PYTHON.md  SETUP.md  VENV_SETUP.md  architecture.md  configuration.md  examples.md  index.md  installation.md  internal_prd.json  mkdocs.yml  quickstart.md
examples/: README.md  basic.py  fastapi_example.py  flask_example.py  langchain_example.py
scripts/: publish.py
slimzero/: __init__.py  __main__.py  core.py  exceptions.py  schemas.py
tests/: test_budget.py  test_few_shot.py  test_flagger.py  test_gsd.py  test_hallucination.py  test_history.py  test_injector.py  test_intent.py  test_logger.py  test_plugins.py  test_ralph.py  test_semantic_guard.py  test_slimzero.py  test_validator.py
(+196 files in other folders)
